force-app/main/default/objects/Ecosystem_Entity__c/Ecosystem_Entity__c.object-meta.xml
<CustomObject>
    <label>Ecosystem Entity</label>
    <nameField>
        <label>Ecosystem Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ecosystem Enitiies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>