force-app/main/default/objects/Ecosystem_Entity__c/fields/BPID__c.field-meta.xml
<CustomField>
    <fullName>BPID__c</fullName>
    <formula>Entity__r.BPID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BPID</label>
    <type>Text</type>
</CustomField>