force-app/main/default/objects/Ecosystem_Entity__c/fields/Ecosystem__c.field-meta.xml
<CustomField>
    <fullName>Ecosystem__c</fullName>
    <label>Ecosystem</label>
    <referenceTo>Ecosystem__c</referenceTo>
    <relationshipLabel>Ecosystem Entities</relationshipLabel>
    <relationshipName>Ecosystem_Entities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>