force-app/main/default/objects/Ecosystem_Entity__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ecosystem Entities</relationshipLabel>
    <relationshipName>Ecosystem_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>