force-app/main/default/objects/Ecosystem_Entity__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <defaultValue>&quot;Shareholder / Director&quot;</defaultValue>
    <label>Entity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shareholder / Director</fullName>
            </value>
            <value>
                <fullName>Debtor / Client</fullName>
            </value>
            <value>
                <fullName>Subsidiary</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Creditor / Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>