force-app/main/default/objects/Ecosystem_Entity__c/fields/Individual_Entity__c.field-meta.xml
<CustomField>
    <fullName>Individual_Entity__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Individual Entity</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ecosystem Enitiies</relationshipLabel>
    <relationshipName>Ecosystem_Enitiies</relationshipName>
    <type>Lookup</type>
</CustomField>