force-app/main/default/objects/Ecosystem_Entity__c/fields/Primary_Relationship_Holder__c.field-meta.xml
<CustomField>
    <fullName>Primary_Relationship_Holder__c</fullName>
    <label>Primary Relationship Holder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affluent Clients</fullName>
            </value>
            <value>
                <fullName>Business Banking</fullName>
            </value>
            <value>
                <fullName>Commercial Banking</fullName>
            </value>
            <value>
                <fullName>Enterprise Banking</fullName>
            </value>
            <value>
                <fullName>Entrepreneur</fullName>
            </value>
            <value>
                <fullName>Private Clients</fullName>
            </value>
            <value>
                <fullName>Wealth &amp; Investment Clients</fullName>
            </value>
            <value>
                <fullName>Corporate and Investment Banking</fullName>
            </value>
            <value>
                <fullName>Youth Clients</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>