force-app/main/default/objects/Ecosystem_Entity__c/recordTypes/Ecosystem_Entity.recordType-meta.xml
<RecordType>
    <fullName>Ecosystem_Entity</fullName>
    <active>true</active>
    <label>Ecosystem Entity</label>
</RecordType>