force-app/main/default/objects/Ecosystem_Entity__c/recordTypes/Ecosystem_Individual_Entity.recordType-meta.xml
<RecordType>
    <fullName>Ecosystem_Individual_Entity</fullName>
    <active>true</active>
    <label>Ecosystem Individual Entity</label>
</RecordType>